[gd_scene load_steps=4 format=3 uid="uid://cufllsjneowyo"]

[ext_resource type="Script" uid="uid://i10xqtgde20x" path="res://scripts/plots/empty_plot.gd" id="1_uwfus"]
[ext_resource type="Texture2D" uid="uid://omop6f3mok8e" path="res://art/recttext.png" id="2_4acn8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syd1t"]
size = Vector2(64, 64)

[node name="EmptyPlot" type="Area2D" groups=["plots"]]
script = ExtResource("1_uwfus")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_4acn8")
metadata/_edit_use_anchors_ = true

[node name="MouseDetect" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_syd1t")

[node name="HoverRect" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.467926, 0.493956, 0.08015, 0.494118)
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 8.0
offset_top = 16.0
offset_right = 54.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 15
text = "Build"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
